multi-cluster-services/mcs-mcg/gke-1/foo-frontend.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: mcs-mcg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  namespace: mcs-mcg
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foo
      # version: v1
  template:
    metadata:
      labels:
        app: foo
        # version: v1
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.1.3
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: foo
  namespace: mcs-mcg
spec:
  selector:
    app: foo
    # version: v1
  ports:
  - port: 8080
    targetPort: 8080
# ---
# kind: ServiceExport
# apiVersion: net.gke.io/v1
# metadata:
#   name: foo
#   namespace: store
