multi-cluster-services/mcs-mcg/gke-1/gateway.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: mcs-mcg
---
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: multi-cluster-gateway-ilb
  namespace: mcs-mcg
spec:
  gatewayClassName: gke-l7-rilb-mc
  listeners:  
  - protocol: HTTP
    port: 80
    routes:
      kind: HTTPRoute
      selector:
        matchLabels:
          gateway: multi-cluster-gateway-ilb
